--- a/report.tex
+++ b/report.tex
@@ -34,7 +34,7 @@ Tables 1 and 2 list the results of the experiements. Both tables show the averag
   \begin{center}
   \caption{This table depicts the average runtimes and standard deviations for different input sizes \emph{n} of the cubic algorithm in seconds}
   \label{tbl:resultscubic}
-  \input{threesum_cubic_tabular.tex}
+  %\input{threesum_cubic_tabular.tex}
   \end{center}
 \end{table}
 
@@ -42,13 +42,13 @@ Tables 1 and 2 list the results of the experiements. Both tables show the averag
   \begin{center}
   \caption{This table depicts the average runtimes and standard deviations for different input sizes \emph{n} of the hash map algorithm in seconds}
   \label{tbl:resultshashmap}
-  \input{threesum_hashmap_tabular.tex}
+  %\input{threesum_hashmap_tabular.tex}
   \end{center}
 \end{table}
 
 \begin{figure}[h]
   \begin{center}
-    \includegraphics[width=\textwidth]{plot_cubic_vs_hashmap.pdf}
+    %\includegraphics[width=\textwidth]{plot_cubic_vs_hashmap.pdf}
     \caption{Comparison of runtimes of the cubic and hash map algorithm for different input sizes}
     \label{fig:runtimes}
   \end{center}
